chore: fix peers map overflow

--- a/src/peers/WorldMap/WorldMap.css
+++ b/src/peers/WorldMap/WorldMap.css
@@ -2,17 +2,18 @@
     pointer-events: none;
 }
 
-.visualPath {
-    pointer-events: none;
-}
-
 .mapDotExplanation {
     display: inline-block;
     border-radius: 50%;
 }
 
 .mapDot {
+    pointer-events: all;
     animation: appearDot 0.3s ease-in-out both;
+}
+
+.no-events {
+    pointer-events: none;
 }
 
 @keyframes appearDot {
